Fix invalid CSS nesting and header overlap

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ a:hover {
 }
 
 .main {
-  padding-top: 100px;
+  padding-top: 18s0px;
 }
 
 
